ver 0.19.17 (not yet released)
* fix spurious seek error "Failed to allocate silence buffer"
* replay gain: fix "replay_gain_handler mixer" setting
* DSD: use 0x69 as silence pattern

ver 0.19.16 (2016/06/13)
* faster seeking
* fix system include path order
* add missing DocBook file to tarball

ver 0.19.15 (2016/04/30)
* decoder
  - ffmpeg: support FFmpeg 3.0
  - ffmpeg: use as fallback instead of "mad" if no plugin matches
  - opus: support bigger OpusTags packets
* fix more build failures on non-glibc builds due to constexpr Mutex
* fix build failure due to missing include
* fix unit test on Alpha

ver 0.19.14 (2016/03/18)
* decoder
  - dsdiff: fix off-by-one buffer overflow
  - opus: limit tag size to 64 kB
* archive
  - iso9660: fix buffer overflow
* fix quadratic runtime bug in the tag pool
* fix build failures on non-glibc builds due to constexpr Mutex

ver 0.19.13 (2016/02/23)
* tags
  - aiff, riff: fix ID3 chunk padding
* decoder
  - ffmpeg: support the TAK codec
* fix disappearing duration of remote songs during playback
* initialize supplementary groups with glibc 2.19+

ver 0.19.12 (2015/12/15)
* fix assertion failure on malformed UTF-8 tag
* fix build failure on non-Linux systems
* fix LimitRTTIME in systemd unit file

ver 0.19.11 (2015/10/27)
* tags
  - ape: fix buffer overflow
* decoder
  - ffmpeg: fix crash due to wrong avio_alloc_context() call
  - gme: don't loop forever, fall back to GME's default play length
* encoder
  - flac: fix crash with 32 bit playback
* mixer
  - fix mixer lag after enabling/disabling output

ver 0.19.10 (2015/06/21)
* input
  - curl: fix deadlock on small responses
  - smbclient: fix DFF playback
* decoder
  - ffmpeg: improve seeking accuracy
  - fix stuck stream tags
* encoder
  - opus: fix bogus granulepos
* output
  - fix failure to open device right after booting
* neighbor
  - nfs: fix deadlock when connecting
* fix "single" mode breakage due to queue edits

ver 0.19.9 (2015/02/06)
* decoder