@@ -1,4 +1,6 @@
 ver 0.19.17 (not yet released)
+* decoder
+  - flac: fix assertion failure while seeking
 * fix spurious seek error "Failed to allocate silence buffer"
 * replay gain: fix "replay_gain_handler mixer" setting
 * DSD: use 0x69 as silence pattern
